--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -6,11 +6,8 @@
           <div class="d-flex align-items-center">
             <p class="text-sm mb-0">
               &copy; 2023
-              <a
-                href="https://www.linkedin.com/in/aditya-agrawal-37721b146/"
-                target="_blank"
-                >Aditya Agrawal</a
-              >. All rights reserved.
+              <a href="#" target="_blank">Aditya Agrawal</a>. All rights
+              reserved.
             </p>
           </div>
         </div>
