--- a/views/dashboard.ejs
+++ b/views/dashboard.ejs
@@ -54,7 +54,42 @@
               <!-- Profile Card -->
               <%- include('partials/profile'); %>
             </div>
-            <div class="col-lg-8 mt-lg-5" id="post-grid" style=""></div>
+            <div class="col-lg-8 mt-lg-5" id="post-grid" style="">
+              <% for(const post of posts) { %>
+              <div
+                class="card mt-4"
+                style="cursor: pointer"
+                onclick='window.location.replace("/post/<%= post._id %>")'
+              >
+                <div class="card-header pt-4 pb-2">
+                  <div class="card overflow-hidden border-0">
+                    <img
+                      alt="Image placeholder"
+                      loading="lazy"
+                      src="../img/theme/light/app-2.png"
+                      class="card-img-top"
+                    />
+                    <span class="mask bg-info opacity-3"></span>
+                    <span
+                      class="mask hover-mask bg-gradient-warning opacity-9"
+                    ></span>
+                    <div class="card-img-overlay d-flex flex-column">
+                      <div class="my-auto text-center px-3 py-5">
+                        <a
+                          href="/post/<%= post._id %>"
+                          class="h3 text-white mb-0"
+                          ><%= post.title %></a
+                        >
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="card-body">
+                  <p><%= post.subTitle %></p>
+                </div>
+              </div>
+              <% } %>
+            </div>
           </div>
         </div>
       </section>
