--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -53,7 +53,23 @@
             role="group"
             aria-label="Basic example"
           >
-            <div class="btn-group" role="group"></div>
+            <div
+              class="btn-group"
+              role="group"
+              style="transform: translateY(-50%)"
+            >
+              <% if(user.role===0) { %>
+              <a
+                href="/profile"
+                class="btn btn-icon btn-group-nav shadow btn-neutral"
+              >
+                <span class="btn-inner--icon"><i class="fas fa-edit"></i></span>
+                <span class="btn-inner--text d-none d-md-inline-block"
+                  >Create Post</span
+                >
+              </a>
+              <% } %>
+            </div>
           </div>
         </div>
       </div>
