--- a/views/partials/profile.ejs
+++ b/views/partials/profile.ejs
@@ -24,8 +24,15 @@
     </a>
     <div class="card-body p-3 pt-0 text-center">
       <h5 class="mb-0"><%= user.displayName %></h5>
+      <% if(user.role===0) { %>
+      <span class="d-block text-muted mb-3">Creator</span>
+      <% } else { %>
+      <span class="d-block text-muted mb-3">Student</span>
+      <% } %>
 
-      <div class="avatar-group hover-avatar-ungroup mb-3"></div>
+      <div class="actions mt-3 pt-3 px-5 delimiter-top">
+        <p><%= user.about %></p>
+      </div>
     </div>
   </div>
 </div>
