--- a/views/create-post.ejs
+++ b/views/create-post.ejs
@@ -431,6 +431,8 @@
     const description = editor1.getHTMLCode();
     console.log(title, description);
 
+    // Upload the Thumbnail image first
+
     const response = await fetch("/create/post", {
       method: "POST",
       body: JSON.stringify({
