--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -60,7 +60,7 @@
             >
               <% if(user.role===0) { %>
               <a
-                href="/profile"
+                href="/create/post"
                 class="btn btn-icon btn-group-nav shadow btn-neutral"
               >
                 <span class="btn-inner--icon"><i class="fas fa-edit"></i></span>
